miniextendr-macros/tests/ui/impl_multiple_class_systems.stderr
error: multiple class systems specified (`r6` and `s4`); use only one of: env, r6, s3, s4, s7, vctrs
 --> tests/ui/impl_multiple_class_systems.rs:7:19
  |
7 | #[miniextendr(r6, s4)]
  |                   ^^
